# c_language

./: .gitignore  CMakeLists.txt  README.md  section1_pointers.c
all_files/: main.c  saection_27_practicalImplementations.c  section1_passByReference.c  section3_1_arithmetic_intro.c  section4_void_asterisk.c  section5_10_second_smallest.c  section5_18_adjacentElementsSortedOnFloatingArray.c  section5_19_printNumberInBinaryUsingRecursion.c  section5_1_searchIfElementIsArray.c  section5_2_inputPrintFunctions.c  section5_3_findPassingByPointers.c  section5_5_arrayWithGoodNeighboors.c  section5_6_arraySortedOrNot.c  section5_7_arraySortedOrNotRecursive.c  section5_8_reverseArrayOfChars.c  section6_1_SwappingOnComplexityO1.c  section7_5_reallocPerformance.c  section8_createArrayNoDuplicates.cpp  section_10_1_returnStringToFunction.c  section_10_2_ectraStringAndPointers.c  section_11_stringLength.c  section_12_compare2StringsUsingPointers.c  section_13_createArrayOfStructVariablesInAStaticManner.c  section_13_dynamicallyAllocatedArrayOfStructs.c  section_13_functionToDynamicallyAllocateArrayOfStructs.c  section_13_passingStuctsToFunctionsByValue.c  section_13_structComposition.c  section_14_proJectSchoolManagementSystem.c  section_17_arrayOfPointersToFunctions.c  section_17_pointerToFunctions.c  section_18_functionPointerWithVoidUniversalPointers.c  section_18_pizzaMakingFunctionPointers.c  section_18_sortingArratUsingFunctionPointers.c  section_19_assignements.c  section_19_compareTextualFiles.c  section_19_ftellFseekRewind.c  section_19_remoceSpaceCharacters.c  section_19_removeFunction.c  section_19_renameFunction.c  section_19_splitOddEvenFiles.c  (+56 more)
